[gd_scene load_steps=3 format=3 uid="uid://bf7pdlktr7duo"]

[ext_resource type="Script" path="res://Interface/Main_menu/main_menu.gd" id="1_i25sc"]
[ext_resource type="PackedScene" uid="uid://dsvoanrsetrxb" path="res://Interface/Settings/Settings.tscn" id="2_ryrnp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i25sc")

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer5" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Play" type="Button" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Play"

[node name="MarginContainer4" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" type="Button" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Settings"

[node name="MarginContainer6" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit" type="Button" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Exit"

[node name="MarginContainer7" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="Main/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="B_Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="B_Settings" instance=ExtResource("2_ryrnp")]
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="B_Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="B_Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="B_Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Back" type="Button" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Back"

[node name="MarginContainer3" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer5" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer5" type="MarginContainer" parent="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="B_Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/MarginContainer3/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="B_Settings/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2/Back" to="." method="_on_back_pressed"]
